script를 외부 js로 분리

--- a/index.html
+++ b/index.html
@@ -1,22 +1,12 @@
 <html>
     <head>
         <link href="style.css" rel="stylesheet"/>
-        
-        <link href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" rel="stylesheet"/>
         <script src="https://kit.fontawesome.com/4c7ebdd4a9.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <input type="button" value="버튼"/>
-        <script>
-            console.log("test")
-            let button = document.querySelector("input")
-            button.addEventListener("click",
-                function(e){
-                    alert("clicked!")
-                }
-            )
-        </script>
-        
+        <script src="script.js"></script>
+        <p onclick="hi()">click here</p>
         <div>
             <div id="top">
                 <img src="image/logo.png"/>
