--- a/13_1_1.html
+++ b/13_1_1.html
@@ -3,8 +3,13 @@
     keydown <input id="keydown"/>
 </p>
 <p>
-    change <input id="change"/>
+    change <input type="range" id="change"/>
 </p>
 <p>
     input <input id="input"/>
 </p>
+
+<button onMouseover="red(event)" onMouseleave="blue(event)">
+    here
+</button>
+<button>test</button>
