--- a/13_1_1.html
+++ b/13_1_1.html
@@ -1,4 +1,4 @@
-<script src="13_1_1.js"></script>
+<script src="13_2_1.js"></script>
 <p>
     keydown <input id="keydown"/>
 </p>
@@ -6,10 +6,13 @@
     change <input type="range" id="change"/>
 </p>
 <p>
-    input <input id="input"/>
+    input <input type="button" id="input"/>
 </p>
 
 <button onMouseover="red(event)" onMouseleave="blue(event)">
     here
 </button>
-<button>test</button>
+<button>test</button><br/><br/>
+
+<img src="image/profile.jpg", width="200px", height="200px"/><br/>
+<input id="NextImage" type="button" value="next image"/>
