--- a/13_1_1.html
+++ b/13_1_1.html
@@ -1,4 +1,4 @@
-<script src="13_2_1.js"></script>
+<script src="13_2_6.js"></script>
 <p>
     keydown <input id="keydown"/>
 </p>
@@ -15,4 +15,6 @@
 <button>test</button><br/><br/>
 
 <img src="image/profile.jpg", width="200px", height="200px"/><br/>
-<input id="NextImage" type="button" value="next image"/>
+<input id="NextImage" type="button" value="next image"/><br/>
+<p id="pJscode">HTML로 입력함</p>
+<input id="Jscode" type="button" value="js code!"/>
