--- a/13_1_1.html
+++ b/13_1_1.html
@@ -1,4 +1,4 @@
-<script src="13_2_6.js"></script>
+<script src="13_2_8.js"></script>
 <p>
     keydown <input id="keydown"/>
 </p>
@@ -17,4 +17,13 @@
 <img src="image/profile.jpg", width="200px", height="200px"/><br/>
 <input id="NextImage" type="button" value="next image"/><br/>
 <p id="pJscode">HTML로 입력함</p>
-<input id="Jscode" type="button" value="js code!"/>
+<input id="Jscode" type="button" value="js code!"/><br/>
+<p>(13_2_8.js)----------------------------------------------------------</p>
+<div>
+    <strong>이름: </strong><span id="nameHere">None</span>
+    <input id="nameEditButton" type="button" value="수정"/>
+</div>
+<div id="editNameField" style="display: none;">
+    <input id="newName" type="text" value="새 이름 입력"/>
+    <input id="okButton" type="button" value="확인"/>
+</div>
