span/style.display/prompt

--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
         <script src="https://kit.fontawesome.com/4c7ebdd4a9.js" crossorigin="anonymous"></script>
     </head>
     <body>
-        <input type="button" value="버튼"/>
         <script src="script.js"></script>
-        <p onclick="hi()">click here</p>
         <div>
             <div id="top">
                 <img src="image/logo.png"/>
@@ -24,7 +22,7 @@
                 </div>
                 <div id="profile_info">
                     <div id="id">
-                        l.papa
+                        <span>l.papa</span>
                         <i class="fa-solid fa-gear"></i>
                     </div>
                     <button>프로필 편집</button>
