edit HTML using JS

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
     <head>
         <link href="style.css" rel="stylesheet"/>
         <script src="https://kit.fontawesome.com/4c7ebdd4a9.js" crossorigin="anonymous"></script>
+        <script src="script.js"></script>
     </head>
     <body>
-        <script src="script.js"></script>
+        
         <div>
             <div id="top">
                 <img src="image/logo.png"/>
@@ -31,10 +32,10 @@
         </div>
         <div>
             <p>
-                <strong>xenocurrency</strong><br/>
-                제노
+                <strong id="userInfo">xenocurrency</strong><br/>
+                <span id="summary">제노</span>
             </p>
-            <p>
+            <p id="profileDetail">
                 <a href="https://github.com/xenocurrency">
                     github.com/xenocurrency
                 </a>
