--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
     <head>
         <link href="style.css" rel="stylesheet"/>
         <script src="https://kit.fontawesome.com/4c7ebdd4a9.js" crossorigin="anonymous"></script>
-        <script src="script.js"></script>
+        
     </head>
     <body>
-        
+        <script src="script.js"></script>
         <div>
             <div id="top">
                 <img src="image/logo.png"/>
@@ -19,7 +19,7 @@
             </div>
             <div id="profile">
                 <div id="profile_pic">
-                    <img class="circle_pic" src="image/profile.jpg"/>
+                    <img class="circle_pic" src="image/7.jpg"/>
                 </div>
                 <div id="profile_info">
                     <div id="id">
